add manual trigger for the workflow and ajusted the environment which the pipeline should run

--- a/.github/workflows/deploy-cartservice.yaml
+++ b/.github/workflows/deploy-cartservice.yaml
@@ -6,10 +6,12 @@ on:
       - main
     paths:
       - 'CartService/**'
+    workflow_dispatch:
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: dev
 
     steps:
     - name: Checkout code
