--- a/.github/workflows/deploy-cartservice.yaml
+++ b/.github/workflows/deploy-cartservice.yaml
@@ -11,7 +11,8 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    environment: dev
+    environment: 
+      name: 'dev'
 
     steps:
     - name: Checkout code
