--- a/.github/workflows/deploy-cartservice.yaml
+++ b/.github/workflows/deploy-cartservice.yaml
@@ -10,9 +10,8 @@ on:
 
 jobs:
   build-and-deploy:
+    environment: dev
     runs-on: ubuntu-latest
-    environment: 
-      name: 'dev'
 
     steps:
     - name: Checkout code
