--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -10,7 +10,11 @@ on:
     inputs:
       environment:
         description: 'Target environment'
+        required: true
         default: 'dev'
+        type: choice
+        options:
+          - 'dev'
 
 jobs:
   build-and-deploy:
