--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'CartService/**
+      - 'CartService/**'
   workflow_dispatch:
     inputs:
       environment:
